# typer-concierge-web

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: publish-preview-on-commit.yaml  publish-production-on-tag-push.yaml
public/: dictionary_catalog.json  dictionary_index.json
public/dictionary/: Jouyoukanji.tconciergew  hashiremerosu_1.tconcierges
src/: App.tsx  GoogleAnalytics.tsx  KeyStrokePane.tsx  LineWindow.tsx  ModeSelectView.tsx  NotificationToast.tsx  ResponsiveCanvas.tsx  ResultSummaryPane.tsx  ResultView.tsx  SelectDictionaryPane.tsx  StartSignal.tsx  TimerPane.tsx  TransitionToTypingView.tsx  TypingView.tsx  ViewPane.tsx  lib.rs  useLibrary.ts  useNotification.ts  useTypingEngine.ts  utility.tsx  vite-env.d.ts
src/@types/: type.d.ts
src/component/: Footer.tsx  LineWindow.tsx
src/hook/: useCountdownTimer.tsx  useGameControl.ts  useLibrary.ts  useMilliSecondTimer.ts  useNotification.ts  useTypingEngine.ts
src/layout/: FixedFullScreen.tsx  Scrollable.tsx
src/layout/component/: Base.tsx  BaseWithoutScroll.tsx
src/scss/: bootstrap-custom.scss
src/util/: analyticsUtils.ts
src/view/ModeSelect/: ModeSelectView.tsx  SelectDictionaryPane.tsx  index.ts
src/view/Result/: ActionAfterFinish.tsx  GameActionPane.tsx  ResultSummaryPane.tsx  ResultView.tsx  ShareResult.tsx  SingleKeyStrokeScatterPane.tsx  SingleKeyStrokeSkillPane.tsx  StatisticsDataControlPane.tsx  TileCard.tsx  utility.ts
src/view/TransitionToTyping/: StartSignal.tsx  TransitionToTypingView.tsx  index.ts
src/view/Typing/: KeyStrokePane.tsx  TimerPane.tsx  TypingView.tsx  ViewPane.tsx  index.ts  utility.tsx
wasm-src/: display.rs  lib.rs  library.rs  result.rs
