[package]
name = "typer-concierge-web"
version = "0.1.0"
authors = ["Kotaro7750 <7750koutarou@gmail.com>"]
edition = "2021"

[lib]
path = "wasm-src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.77", features = [ "console", "Response" ] }
typing_engine = "0.4.3"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4.50"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tsify = "0.5.5"
tokio = {version = "1.44.2", features = ["sync"]}
chrono = "0.4.41"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
